# pysimdjson-schemaful

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
simdjson_schemaful/: __init__.py  parser.py
simdjson_schemaful/pydantic/: __init__.py  v1.py  v2.py
tests/: conftest.py  test_parser.py
tests/pydantic/v1/: conftest.py  test_model.py  test_parse.py
tests/pydantic/v2/: conftest.py  test_model.py  test_type_adapter.py
